syntax = "proto3";

package course_recommender;

option go_package = "./api";

import "course.proto";
import "degree_type.proto";

// The DegreeCourse message, representing the many-to-many relationship
// between degree types and courses.
message DegreeCourse {
  int64 degree_type_id = 1;
  int64 course_id = 2;
}

// Request to create a new degree-course association.
message CreateDegreeCourseRequest {
  int64 degree_type_id = 1;
  int64 course_id = 2;
}

// Response containing the newly created degree-course association.
message CreateDegreeCourseResponse {
  DegreeCourse degree_course = 1;
}

// Request to get all courses for a specific degree type.
message GetCoursesByDegreeIdRequest {
  int64 degree_type_id = 1;
}

// Response containing a list of courses for a specific degree type.
message GetCoursesByDegreeIdResponse {
  repeated Course courses = 1;
}

// Request to get all degree types for a specific course.
message GetDegreesByCourseIdRequest {
  int64 course_id = 1;
}

// Response containing a list of degree types for a specific course.
message GetDegreesByCourseIdResponse {
  repeated DegreeType degree_types = 1;
}

// Request to delete a degree-course association.
message DeleteDegreeCourseRequest {
  int64 degree_type_id = 1;
  int64 course_id = 2;
}

// Response indicating whether the deletion was successful.
message DeleteDegreeCourseResponse {
  bool success = 1;
}
